TryAgain and timeBar solved

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,8 @@ body {
         #070a35 50%,       
         #ef019f 100%
     );
+    background-repeat: no-repeat;
+    background-size: auto;
     
 
     color: $foreground;
