Welcome cursor  put on static/img

--- a/src/components/WelcomeAnimation/Welcome.scss
+++ b/src/components/WelcomeAnimation/Welcome.scss
@@ -12,7 +12,7 @@
 
 .undertale-box{
 
-    cursor: url('src/img/cursor02pointer.png'), pointer;
+    cursor: url('/static/img/cursor02pointer.png'), pointer;
 }
 
 .tip{
