background gradient solved on list of songs

--- a/src/components/GameOver/GameOver.scss
+++ b/src/components/GameOver/GameOver.scss
@@ -68,7 +68,7 @@
        color:orange;
        text-shadow: 4px 0 #000, -4px 0 #000, 0 4px #000f, 0 -4px #000,
              2px 2px #000, -2px -2px #000, 2px -2px #000, -2px 2px #000;
-       cursor:url('src/img/cursor02pointer.png'), pointer;
+       cursor:url('/static/img/cursor02pointer.png'), pointer;
     }
 
 }
